Fixing Search bar on Mobile

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -75,6 +75,7 @@
     font-size: 16px;
     background-color: white;
     width:100%;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {
@@ -102,6 +103,11 @@
     .streamcard {
         margin:0 auto;
         width:280px;
+    }
+
+    .searchBar {
+        position:relative;
+        left:9%;
     }
 }
 
